--- a/app/css/landing.css
+++ b/app/css/landing.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url(../../resources/img/landing-bg.jpg);
+    background-image: url(/app/img/landing-bg.jpg);
     background-size: cover;
 }
 
