--- a/app/css/landing.css
+++ b/app/css/landing.css
@@ -8,27 +8,15 @@ body {
     margin-top: 50px;
 }
 
-.box {
+.content-box h1 {
+    font-size: 6rem;
+}
+
+.login-box {
+    background-color: white;
+    border-radius: 5px;
+}
+
+.login-box h3 {
     text-align: center;
-    margin-bottom: 10px;
-}
-
-.box a {
-    color: black;
-    margin: auto;
-    background-color: #eee;
-    transition: background-color 0.2s ease;
-    border-radius: 80px;
-    width: 300px;
-    height: 140px;
-    line-height: 140px;
-    font-size: 4rem;
-    display: block;
-}
-
-.box a:hover {
-    color: black;
-    cursor: pointer;
-    text-decoration: none;
-    background-color: #fff;
 }
