--- a/app/css/rider.css
+++ b/app/css/rider.css
@@ -3,16 +3,12 @@ body {
     background-size: cover;
 }
 
-#map {
-    height: 600px;
-	width: 1140px;
-	overflow: visible;
-  }
-  html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+#map 
+{
+	height: 500px;
+    	width: 100%;
 }
+
 
 .content-box {
     margin-top: 50px;
