--- a/app/css/driver.css
+++ b/app/css/driver.css
@@ -1,34 +1,84 @@
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-image: url(../img/landing-bg.jpg);
     background-size: cover;
 }
 
-.content-box {
-    margin-top: 50px;
+.title-box {
+    margin-top: 30px;
 }
 
-.box {
-    text-align: center;
-    margin-bottom: 10px;
+#map {
+    height: 100%;
 }
 
-.box a {
-    color: black;
-    margin: auto;
-    background-color: #eee;
-    transition: background-color 0.2s ease;
-    border-radius: 80px;
-    width: 300px;
-    height: 140px;
-    line-height: 140px;
-    font-size: 4rem;
-    display: block;
-}
-
-.box a:hover {
-    color: black;
-    cursor: pointer;
-    text-decoration: none;
+#floating-panel {
+    position: absolute;
+    top: 10px;
+    left: 25%;
+    z-index: 5;
     background-color: #fff;
+    padding: 5px;
+    border: 1px solid #999;
+    text-align: center;
+    font-family: 'Roboto', 'sans-serif';
+    line-height: 30px;
+    padding-left: 5px;
+}
+
+#right-panel {
+    font-family: 'Roboto', 'sans-serif';
+    line-height: 30px;
+    padding-left: 10px;
+}
+
+#right-panel select, #right-panel input {
+    font-size: 15px;
+}
+
+#right-panel select {
+    width: 100%;
+}
+
+#right-panel i {
+    font-size: 12px;
+}
+
+#right-panel {
+    height: 100%;
+    float: right;
+    width: 390px;
+    overflow: auto;
+}
+
+#map {
+    margin-right: 400px;
+}
+
+#floating-panel {
+    background: #fff;
+    padding: 1px;
+    font-size: 22px;
+    font-family: Arial;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 2px rgba(33, 33, 33, 0.4);
+    display: none;
+}
+
+@media print {
+    #map {
+        height: 500px;
+        margin: 0;
+    }
+
+    #right-panel {
+        float: none;
+        width: auto;
+    }
 }
