--- a/app/css/driver.css
+++ b/app/css/driver.css
@@ -14,6 +14,14 @@ body {
     margin-top: 30px;
 }
 
+.request-box {
+    height: 400px;
+}
+
+.request-box .well {
+    margin: 10px;
+}
+
 #map {
     height: 100%;
 }
